# adaptive-rag

./: .gitignore  CLAUDE.md  PROCESS_VISUALIZATION.md  README.md  requirements.txt  setup_postgres.sh
.claude/: settings.local.json
backend/: .dockerignore  .env.docker  .env.example  .gitignore  API_TESTING.md  DATABASE.md  Dockerfile  README.md  alembic.ini  cli.py  docker-compose.yml  init_db.py  pyproject.toml  pytest.ini  requirements.txt  run.py  test_api.py
backend/app/: main.py
backend/app/api/v1/: chat.py  documents.py  health.py  visualization.py
backend/app/core/graph/: consts.py  graph.py  state.py
backend/app/core/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
backend/app/core/graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
backend/app/core/ingestion/: healthcare_data.py  ingestion.py
backend/app/core/models/: model.py
backend/app/core/visualization/: __init__.py  events.py
backend/app/db/: database.py  models.py
backend/app/models/: schemas.py
backend/app/services/: chat_service.py  document_service.py
backend/app/utils/: dependencies.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py  test_graph_flow.py  test_healthcare_queries.py
backend/tests/unit/: test_chains.py  test_model.py
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/services/: api.ts  services.ts
frontend/src/types/: api.ts  index.ts  (+1 more)
(+5 files in other folders)
